lab1/multiple-container.yml
apiVersion: apps/v1
kind: Pod
metadata:
  name: yellow
spec:
  containers:
  - name: lemon
    mage: busybox
  - name: gold
    image: redis
