lab1/pod-definition-configmap.yml
apiVersion: v1

kind: Pod

metadata:
  name: simple-webapp-color
  namespace: simple-webapp-color
  labels:
    app: simple-webapp-color
    
spec:
  containers:
    - name: simple-webapp-color
      image: simple-webapp-color
      ports:
        - containerPort: 8080
