lab1/pod-definition.yml
apiVersion: v1

kind: Pod

metadata:
  name: myapp-pod
  labels:
    app: myapp
    
spec:
  containers:
    - name: nginx-container
      image: nginx
    - name: backend-container
      image: redis
