lab1/pod-node-selector.yml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-prod
spec:
  containers:
    - name: data-processor
      image: data-processor
  nodeSelector:
    size: Large
