lab1/pod-sc.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: nginx
spec:
  containers:
  - image: nginx:alpine
    name: nginx
    volumeMounts:
    - mountPath: /var/www/html
      name: data-volume
  volumes: 
  - name: data-volume
    persistentVolumeClaim:
      claimName: local-pvc
