lab1/security-config.yml
apiVersion: v1
kind: Pod
metadata: 
  name: web-Pod
spec:
  containers:
    - name: ubuntu
      image: ubuntu
      command: ["sleep", "3600"]
      securityContext:
        runAsUser: 1000
