lab1/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: interal-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      name: interal
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          name: mysql
      ports:
      - protocol: TCP
        port: 3306
    - podSelector:
        matchLabels:
          name: payroll
      ports:
      - protocol: TCP
        port: 8080
